# msaidizi-app

./: .build-trigger  .gitignore  APK_SIGNING_FIX.md  ARCHITECTURE.md  BUILD-REPORT.md  BUILD_FIX_REPORT.md  BUILD_TROUBLESHOOTING.md  BUILD_VALIDATION.md  CHANGELOG.md  CI_BUILD_REPORT.md  CI_FIX.md  CI_FIX_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRASH_DIAGNOSIS.md  DECISION_COUNCIL_REPORT.md  DEPENDENCY_VERIFICATION.md  FEATURE_TEST_REPORT.md  FIXES_APPLIED.md  FIX_ROOM.md  FLUTTER_ARCHITECTURE.md  FULL_COMPREHENSIVE_REVIEW.md  ICON_FIXES.md  ICON_REDESIGN.md  INTEGRATION.md  INTEGRATION_TEST_REPORT.md  LICENSE  MODEL_INTEGRATION.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  STATS_FIXES.md  STORE_SUBMISSION.md  STRATEGIC_PLAYBOOK.md  STRATEGY.md  SUPPORT.md  build-debug.sh  build-full-apk.sh  build.gradle.ksp  (+10 more)
.github/: dependency-check-suppressions.xml
.github/workflows/: 8-dimension-validation.yml  auto-fix.yml  auto-release.yml  build-apk.yml  build.kotlin2.yml  build.ksp.yml  build.yml  ci.yml  pre-commit-validation.yml  pre-commit.yml  release.yml
.openclaw/tmp/: eng_android_progress.md  feature_verification.md  fix_hermes_report.md  fix_persistence.md  fix_release_signing.md  gen_icons.py  review_build.md  user_journeys.md
app/: build.gradle.ksp  build.gradle.kts  build.gradle.kts.kotlin2  build.gradle.kts.minimal  proguard-rules.pro
app/api/: sync.py
app/services/: federated_learning.py
app/services/intelligence/: goal_achievement.py
app/src/main/: AndroidManifest.xml
app/src/main/assets/: financial_knowledge_sw.json  intent_patterns.json  vocab_dholuo_seed.json  vocab_hausa_seed.json  vocab_sheng_seed.json  vocab_swahili_seed.json  vocab_yoruba_seed.json  whisper_vocab.json
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni_stub.cpp  sherpa_jni.cpp  vad_jni.cpp
app/src/main/res/drawable/: bg_alert.xml  bg_bot_message.xml  bg_input.xml  bg_instruction_badge.xml  bg_risk_badge.xml  bg_spinner.xml  bg_user_message.xml  ic_arrow_back.xml  ic_arrow_forward.xml  ic_camera.xml  ic_check_circle.xml  ic_dashboard.xml  ic_history.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_foreground_mono.xml  ic_lock.xml  ic_logo.xml  ic_notification.xml  ic_radio_unchecked.xml  ic_record.xml  ic_send.xml  ic_settings.xml  ic_stop.xml  ic_today.xml  loan_progress_drawable.xml  scan_overlay.xml  splash_screen.xml  splash_tagline.xml
app/src/main/res/layout/: activity_app_lock.xml  activity_main.xml  activity_onboarding.xml  activity_receipt_scan.xml  card_flow_metric.xml  card_stat.xml  card_transaction.xml  component_loading.xml  dialog_agent_naming.xml  dialog_variable_reward.xml  fragment_business_flow.xml  fragment_camera_capture.xml  fragment_dashboard.xml  fragment_gamification.xml  fragment_goals.xml  fragment_history.xml  fragment_home.xml  fragment_loan.xml  fragment_mindset.xml  fragment_model_download.xml  fragment_phone_verification.xml  fragment_record.xml  (+19 more)
assets/icons/: README.md  splash-screen.xml
config/detekt/: detekt.yml
core/: build.gradle.kts
core/common/: build.gradle.kts
core/database/: build.gradle.kts
core/model/: build.gradle.kts  consumer-rules.pro
core/model/src/main/: AndroidManifest.xml
core/security/: build.gradle.kts
core/voice/: build.gradle.kts  consumer-rules.pro
core/voice/src/main/: AndroidManifest.xml
data/: build.gradle.kts
docs/: CV-AUDIT-2026.md  HARNESS_RESEARCH.md  ON_DEVICE_LANGUAGE_LEARNING_DESIGN.md  VISION_SYSTEM_DESIGN.md  install.html  review_msaidizi_app.md
docs/architecture/: arch_android.md  arch_chief.md  arch_flywheel.md  arch_memory.md  arch_security.md  arch_superagent_design.md  arch_voice.md  architecture-backend-superagent.md  architecture-msaidizi-superagent.md  architecture_improvements.md  council_final_review.md  council_review_new_arch.md  gap-alama-score.md  gap-dialect-scaling.md  gap-federated-learning.md  gap-ooda-loop.md  gap-proactive-alerts.md  gap-quantum-solver.md  gap-skill-crystallization.md  grand_synthesis_architecture.md  growth_feedback_loops.md  growth_model_evolution.md  growth_ondevice_learning.md  superagent_tools_definition.md  synthesize_all.md
docs/council-reviews/: council-review-backend.md  council-review-msaidizi-app.md  council-review-website.md
docs/research/: deep-research-agriculture.md  deep-research-creative.md  deep-research-services.md  deep-research-trade-commerce.md  deep-research-transport.md  deep_worker_validation.md  research-economic-validation.md  research-emerging-systems.md  research-language-dialects.md  research-quantum-agi.md  research-superagent-architecture.md  research_agi_ready.md  research_ai_space.md  research_business_flow.md  research_economic_problems.md  research_invisibility_cost.md  research_multilanguage.md  research_quantum_agi.md  research_quantum_available_now.md  research_quantum_specific.md  research_super_agent.md  research_swarm_orchestrator.md  research_tech_stack.md  research_worker_types_bootstrap.md  synthesize_super_agent.md
docs/validation/: validation-agriculture-food.md  validation-cfo-superagent.md  validation-creative-digital.md  validation-informal-economy.md  validation-services-skilled.md  validation-trade-commerce.md  validation-transport-logistics.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
onboarding/: build.gradle.kts
research/: AI-TRAINING-APPROACHES-2026.md  VOICE-PIPELINE-AUDIT-2026.md
reviews/: multilingual-adaptive-learning-research.md
scripts/: auto-fix-build.sh  build-release.sh  check-kapt-compat.py  check-room-entities.py  check_braces.py  check_xml.py  download-models.sh  generate-debug-keystore.sh  generate-keystore.sh  manual-build.sh  pre-commit  pre-commit-hook.sh  setup-llama-cpp.sh  setup-sherpa-onnx.sh  validate-all-dimensions.sh  validate-build.sh  verify-apk-signing.sh
scripts/waxal/: README.md  download_waxal.py  finetune_whisper.py
superagent/credit/: build.gradle.kts
superagent/financial/: build.gradle.kts
superagent/goals/: build.gradle.kts
(+701 files in other folders)
